kubernetes/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-curl
  namespace: default
spec:
  containers:
  - name: ubuntu-curl
    image: ubuntu
    command:
      - "/bin/bash"
      - "-c"
      - |
        apt-get update &&
        apt-get install -y curl &&
        bash
    stdin: true
    tty: true
  restartPolicy: Never
