kubernetes/updated-deployment-pyapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-deployment
  labels:
    app: pyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
        - name: pyapp
          image: pythonapp:5.0 
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pyapp-service
  labels:
    app: pyapp
spec:
  type: ClusterIP
  selector:
    app: pyapp
  ports:
    - protocol: TCP
      port: 5000       
      targetPort: 5000
