kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx  # Use the 'nginx' ingress class for my NGINX Ingress controller
  rules:
  - host: pyapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyapp-service
            port:
              number: 5000
